--- a/renewal/js/codeEditor/css/codeEditor.css
+++ b/renewal/js/codeEditor/css/codeEditor.css
@@ -37,6 +37,7 @@
   background-repeat: no-repeat;
   background-size: 100% 100%;
   border: none;
+  outline: none;
   transition: all 0.15s ease-in-out;
 }
 
