--- a/renewal/js/setting/css/setting.css
+++ b/renewal/js/setting/css/setting.css
@@ -1,53 +1,111 @@
 /*--------------- SETTING --------------*/
-.hb_setting__body {
-  width: 90%;
-  margin: 10px auto;
-  border: 2px solid #495267;
-}
-
-.hb_setting__body-title {
+.hb_setting-body {
   width: 100%;
-  min-height: 15px;
-  margin: 5px, 0px;
+  height: 100%;
+  background-color: #2f2631;
+  border-left: 2px solid #131014;
 }
 
-.hb_setting__body-title__label {
-  width: 100%;
-  font-weight: bold;
-}
-
-.hb_setting__body-content {
-  width: 100%;
-  min-height: 30px;
-  margin: 5px, 0px;
-}
-
-.hb_setting__btn {
+.hb_setting-icon {
   display: inline-block;
-  text-align: center;
+  width: 18px;
+  height: 18px;
+  border: none;
+  background-image: url('./img/expand_more-black-48dp.svg');
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-color: transparent;
+  transition: all .4s ease-out;
   vertical-align: middle;
+  outline: none;
+  fill: #fff
+}
+
+.hb_setting-icon.hide {
+  transform: rotate(-90deg);
+}
+
+.hb_setting-section {
+  width: 100%;
+  margin: 0;
+}
+
+.hb_setting-section__title {
+  width: 100%;
+  height: 30px;
+  background-color: #211b23;
+  border-bottom: 2px solid #131014;
+}
+
+.hb_setting-section__title__label {
+  font-size: 13px;
+  font-weight: bold;
+  line-height: 30px;
+  color: #b9a5a6;
+  -webkit-user-select: none; /* Safari */
+  -ms-user-select: none; /* IE 10+ and Edge */
+  user-select: none; /* Standard syntax */
+}
+
+.hb_setting-section__content {
+  width: 100%;
+  height: auto;
+  overflow:hidden;
+  transition: all .4s ease-out;
+  background-color: #59475c;
+}
+
+.hb_setting-section__content.hide {
+  max-height: 0;
+}
+
+.hb_setting__title {
+  width: 100%;
+  height: 25px;
+  box-sizing: border-box;
+  border: 1px solid #b9a5a6;
+  border-radius: 5px;
+  font-size: 12px;
+  font-weight: bold;
+  line-height: 25px;
+  color:#b9a5a6;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
+}
+
+.hb_setting__content {
+  width: 95%;
+  box-sizing: border-box;
+  margin: 10px auto;
+  border: 1px solid #b9a5a6;
+  border-radius: 5px;
+}
+
+.hb_setting__button {
+  display: block;
+  width: 95%;
+  height: 20px;
+  margin: 5px auto;
+  text-align: center;
   user-select: none;
   background-color: transparent;
   border: 1px solid transparent;
   font-size: 12px;
   border-radius: 0.25rem;
-  transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+  transition: all 0.15s ease-in-out;
   color: #fff;
   background-color: #6c757d;
   border-color: #6c757d;
-  width: 90%;
-  height: 20px;
-  margin-top: 3px;
-  margin-left: auto;
-  margin-right: auto;
 }
 
-.hb_setting__btn:hover {
-  background-color: #858f98;
-  border-color: #545b60;
+.hb_setting__button:hover {
+  color: #fff;
+  background-color: #5a6268;
+  border-color: #545b62;
 }
 
-.hb_setting__btn-phone {
+.hb_setting__button--phone {
   width: 30px;
   height: 30px;
   margin: 5px;
@@ -64,7 +122,7 @@
   border-color: #76818b;
 }
 
-.hb_setting__btn-tablet {
+.hb_setting__button--tablet {
   width: 30px;
   height: 30px;
   margin: 5px;
@@ -81,7 +139,7 @@
   border-color: #76818b;
 }
 
-.hb_setting__btn-browser {
+.hb_setting__button--browser {
   width: 30px;
   height: 30px;
   margin: 5px;
